--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ ext {
 	set('springCloudVersion', "2023.0.0")
 }
 
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -33,6 +34,9 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.0'
 	implementation'org.mariadb.jdbc:mariadb-java-client:3.1.2'
 	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+
+	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	runtimeOnly 'com.h2database:h2'
